media/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: media
spec:
  selector:
    app: server
  ports:
    - name: http
      port: 80
      targetPort: 8096
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 80
      targetPort: 8989
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 80
      targetPort: 9696
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      targetPort: 7878
